cmake_minimum_required(VERSION 3.20.0)
project(CUVIS.Csharp.EXMPLES CSharp C)
add_subdirectory(01_loadMeasurement_cs)
add_subdirectory(02_reprocessMeasurement_cs)
add_subdirectory(03_exportMeasurement_cs)
add_subdirectory(04_changeDistance_cs)
add_subdirectory(05_recordSingleImages_cs)
add_subdirectory(06_recordVideo_cs)
add_subdirectory(07_recordVideoFromSessionFile_cs)
